--- a/blog_app/blog/templates/blog/includes/navbar.html
+++ b/blog_app/blog/templates/blog/includes/navbar.html
@@ -5,23 +5,37 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarToggle">
-                <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="{% url 'blog_home' %}">Home</a>
-                    <a class="nav-item nav-link" href="{% url 'blog_about' %}">About</a>
-                </div>
+            <div class="collapse navbar-collapse flex-column ml-lg-0 ml-3" id="navbarToggle">
+                <ul class="navbar-nav mr-auto">
+                    <li>
+                        <a class="nav-item nav-link" href="{% url 'blog_home' %}">Home</a>
+                    </li>
+                    <li>
+                        <a class="nav-item nav-link" href="{% url 'blog_about' %}">About</a>
+                    </li>
                 <!-- Navbar Right Side -->
-                <div class="navbar-nav">
                     {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'wishlist_index' %}">Wish List</a>
-                    <a class="nav-item nav-link" href="{% url 'post_create' %}">New Post</a>
-                    <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                    <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'wishlist_index' %}">Wish List</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'post_create' %}">New Post</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
                     {% else %}
-                    <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                    <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                    </li>
                     {% endif %}
-                </div>
+                </ul>
             </div>
         </div>
     </nav>
