--- a/blog_app/blog/templates/blog/includes/sidebar.html
+++ b/blog_app/blog/templates/blog/includes/sidebar.html
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<div class="col-md-4 mt-4">
     <div class="content-section">
         <h3>Our Sidebar</h3>
         <p class='text-muted'>You can put any information here you'd like.
